Compose the DuckDB engine end to end, and cut its last MySQL dependency
Merging the MySQL-free boot mode with DuckFailuresExtractor exposed two bugs that
neither half could have found alone. Both were silent - a wrong answer, not an
error - which is why the fix includes DuckEnginePipelineTest, the first test to
run source -> execution -> extraction together.

FIRST: DuckFailuresExtractor took an AssertionService. That bean is now
@ConditionalOnMysqlEngine, so in duckdb mode it does not exist and the
whitelist-enabled path would have failed at construction - a class built to
remove a MySQL dependency, depending on MySQL. It now takes a
Supplier<List<Assertion>>, which DuckAssertionSource::findAll satisfies from the
store. getAssertionsAndJoinGroups() collapses to that call: MysqlFailuresExtractor
joins every assertion to every AssertionGroup row with a triple-nested forEach,
where the store-backed source resolves membership once, at construction, through
the same AssertionGroupImporter rule engine.

SECOND: the assertion-id keying, found independently by two agents and me.
DuckDbAssertionExecutionService WROTE the numeric assertionId while
DuckFailuresExtractor READS by uuid, so the extractor would have found no rows
and reported every assertion as a clean pass. DuckAssertionSource turns that from
wrong into unrecoverable: it builds Assertions from a store that has no numeric
id, so every assertion would have bound the literal string "null" and collapsed
every finding into one bucket. Fixed in 6b0b44aa; the pipeline test now pins it.

Also here, from the merged worktree: rvf.execution.engine=mysql|duckdb, with
matchIfMissing=true so an absent property leaves the production MySQL path
bit-for-bit unchanged. Removing RVF's own dataSource bean turned out not to be
enough - spring.datasource.url is in application.properties and the driver is on
the classpath, so Boot builds a Hikari pool regardless and ddl-auto=create fails
in exactly the old place with no RVF bean invol